syntax = "proto3";

import "google/protobuf/empty.proto";
import "multipaxos/paxos_messages.proto";

option java_multiple_files = true;
option java_package = "cs236351.multipaxos";
//option java_outer_classname = "PaxosProtocol";

package cs236351.multipaxos;

service MultiPaxosAcceptorService {
  rpc DoPrepare(Prepare) returns (Promise) {}
  rpc DoAccept(Accept) returns (Accepted) {}
}

service MultiPaxosLearnerService {
  rpc DoCommit(Commit) returns (google.protobuf.Empty) {}
}
